--- a/module4/module4_slides.Rmd
+++ b/module4/module4_slides.Rmd
@@ -41,15 +41,15 @@ source("../Rscripts/helper_function.R")
 i) Regress the surrogate on the features with penalized least square to get the direction of beta.
 
 ```{r, cache = TRUE}
-x <- all_x %>% select(starts_with("health") | starts_with("COD") | starts_with("NLP")) # COD + NLP
-S <- ehr_data$main_ICD + ehr_data$main_NLP
+x <- log(all_x %>% select(starts_with("health") | starts_with("COD") | starts_with("NLP")) + 1) # COD + NLP
+S <- log(ehr_data$main_ICD + ehr_data$main_NLP + 1)
 
 # Step 1
 beta.step1 <- adaptive_lasso_fit(
-  y = S[1:5000], # surrogate
-  x = x[1:5000], # all X
+  y = S[], # surrogate
+  x = x[], # all X
   family = "gaussian",
-  tuning = "bic"
+  tuning = "cv"
 )
 
 # Features selected
