--- a/module1/module1_slides.Rmd
+++ b/module1/module1_slides.Rmd
@@ -3,19 +3,16 @@ title: "Module 1: Introduction"
 output: beamer_presentation
 ---
 
-
-# CAD data overview
-
-- This data mart is a random sample of patients in the Mass General Brigham (formerly Partner's Healthcare) EHR database who had at least one note of 500 characters and met an initial filter for coronary artery disease (CAD) defined as: 
-
-    - $\geq$ 1 ICD9 code related to CAD (410.x, 411.x, 412.x, 413.x, 414.x)
-    - $\ge$ 1 mention for any CAD related concepts (eg. CAD, CAD procedures, CAD biomarkers, positive stress test)
-
----
-
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 ```
+
+# CAD data overview
+
+This data mart is a random sample of patients in the Mass General Brigham (formerly Partner's Healthcare) EHR database who had at least one note of 500 characters and met an initial filter for **coronary artery disease** (CAD) defined as: 
+    
+- $\geq$ 1 ICD9 code related to CAD (410.x, 411.x, 412.x, 413.x, 414.x). 
+- $\ge$ 1 mention for any CAD related concepts (eg. CAD, CAD procedures, CAD biomarkers, positive stress test).
 
 ```{r, echo = F}
 # Packages required for this module.
@@ -39,50 +36,62 @@ package.check <- lapply(
 source("../Rscripts/helper_function.R")
 ```
 
+# Read in the CAD data
 
-# CAD data features
-```{r size = 'tiny'}
+"label": whether the patient has CAD, **extracted from chart review by a clinician**.
+
+\tiny
+```{r}
 data(ehr_data)
-data <- PhecapData(ehr_data, "healthcare_utilization",
-                   "label", 75,
-                   "patient_id", seed = 123)
+data <- PhecapData(ehr_data, "healthcare_utilization", "label", 75, patient_id = "patient_id", seed = 123)
 data
 ```
 
-- Label: whether the patient has CAD, **extracted from chart review by a clinician**
+# Read in the CAD data
 
+"main_ICD", "main_NLP": total number of billing codes or NLP mentions of the disease.
+
+\tiny
+```{r}
+head(ehr_data[, c(1:5, 25:30)])
+```
 
 # Read in the CAD data
 
-- Features:
-  - "main_ICD", "main_NLP" refers to total number of billing codes or NLP mentions of the disease
-  - "healthcare_utilization" refers to total number of notes the patient has
-  - “CODx” (n = 10) refers to the counts of a specific code
-  - “NLPx” (n = 574) refers to the counts of a NLP term
+"healthcare_utilization": total number of notes the patient has.
 
 \tiny
 ```{r}
-str(ehr_data[, c(1:5, 25:30)])
+head(ehr_data[, c(1:5, 25:30)])
 ```
 
+# Read in the CAD data
+
+“CODx” (n = 10): the counts of a specific code.
+“NLPx” (n = 574): the counts of a NLP term.
+
+\tiny
+```{r}
+head(ehr_data[, c(1:5, 25:30)])
+```
 
 # Basic descriptives
 
-\tiny
 ```{r}
-# Check for missing data
-colnames(ehr_data)[which( colMeans(is.na(ehr_data)) > 0)]
+# Check for missing data.
+colnames(ehr_data)[which(colMeans(is.na(ehr_data)) > 0)]
 ```
 
+\pause
 
 ```{r}
-# Prevalence of the label
+# Prevalence of the label.
 mean(ehr_data$label, na.rm = TRUE)
 ```
 
 # Feature distributions
 
-- The features are highly skewed
+The features are highly skewed.
 
 ```{r echo = FALSE}
 set.seed(99)
@@ -95,7 +104,22 @@ ehr_data[, feature_index] %>%
 
 # Prepare the data for model fitting
 
-- We transform all features with $x \rightarrow log(x+1)$ as they are highly skewed
-
+- We log transform all the features as they are highly skewed
 
 - We orthogonalize all features against health care utilization before fitting as patients with higher healthcare utilization have higher feature counts 
+
+(Please find more details in the `.Rmd` file.)
+
+```{r, echo=FALSE}
+# Log transformed the features. 
+features <- ehr_data[, c(3:ncol(ehr_data))]
+features <- log(features + 1)
+
+# Save the transformed features. 
+# Please note that in the beginning of module 2, the transformation is also performed.
+ehr_data_transformed <- cbind(patient_id = ehr_data$patient_id,
+                              label = ehr_data$label, 
+                              healthcare_utilization =features$healthcare_utilization, 
+                              features) 
+```
+
