--- a/module4/module4_slides.Rmd
+++ b/module4/module4_slides.Rmd
@@ -30,7 +30,7 @@ package.check <- lapply(
 )
 
 # load environment from example 1
-load("../module4/environment.RData")
+load("../module3/environment.RData")
 source("../Rscripts/helper_function.R")
 
 # format slides nicely please
@@ -38,114 +38,130 @@ source("../Rscripts/helper_function.R")
 
 
 # 2-step Semi-supervised Approach
-i) Regress the surrogate on the features with penalized least square to get the direction of beta.
+i) Regress the surrogate on the features with penalized least square to get 
+the direction of beta.
 
-```{r, cache = TRUE}
-x <- log(all_x %>% select(starts_with("health") | starts_with("COD") | starts_with("NLP")) + 1) # COD + NLP
+\tiny
+
+```{r}
+x <- log(ehr_data %>% select(starts_with("health") | starts_with("COD") |
+  starts_with("NLP")) + 1) # COD + NLP + HU
 S <- log(ehr_data$main_ICD + ehr_data$main_NLP + 1)
 
 # Step 1
-beta.step1 <- adaptive_lasso_fit(
+beta_step1 <- adaptive_lasso_fit(
   y = S[], # surrogate
   x = x[], # all X
   family = "gaussian",
-  tuning = "cv"
+  tuning = "ic"
 )
 
 # Features selected
-names(beta.step1[abs(beta.step1) > 0])[-1]
+names(beta_step1[abs(beta_step1) > 0])[-1]
 ```
 
 # 2-step Semi-supervised Approach
+
 i) Regress the surrogate on the features with penalized least square to get the direction of beta.
 
-(ii) Regress the outcome on the linear predictor to get the intercept and multiplier for the beta.
+ii) Regress the outcome on the linear predictor to get the intercept and multiplier for the beta.
+
+\tiny 
+
 ```{r}
 # linear predictor without intercept
-bhatx <- linear_model_predict(beta = beta.step1, x = as.matrix(x))
+bhatx <- linear_model_predict(beta = beta_step1, x = as.matrix(x))
 
 # Step 2
-step2 <- glm(train_y ~ bhatx[train_data$patient_id] + S[train_data$patient_id] +
-  health_count[train_data$patient_id])
+step2 <- glm(train_y ~ bhatx[train_data$patient_id] + S[train_data$patient_id],
+  family = "binomial"
+)
 beta_step2 <- coef(step2)
 beta_step2
+
+# recover beta
+beta <- beta_step2[2] * beta_step1
 ```
 
+# Compare betas
+
+\tiny
+
 ```{r}
-# recover beta
-beta <- beta_step2[2] * beta.step1
-# mu
-mu <- beta_step2[1] +
-  as.numeric(as.matrix(x[test_data$patient_id, ]) %*% beta[-1]) +
-  as.numeric(beta_step2[3] %*% S[test_data$patient_id]) +
-  as.numeric(beta_step2[4] %*% health_count[test_data$patient_id])
-# expit
-y_hat.ss <- plogis(mu)
+# LASSO
+beta_lasso[!beta_lasso == 0][-1]
+# ALASSO
+beta_alasso[!beta_alasso == 0][-1]
+```
 
+# Compare betas
 
-# add feature comparison here to lasso, alsso, phecap
+\tiny
+
+```{r}
+# PheCAP
+
+# 2 Step
+beta[!beta == 0][-1]
 ```
 
 
 # ROC
+
 ```{r}
-plot(roc(test_y, y_hat.lasso),
-  print.auc = TRUE, main = "n_training = 106 (60%)"
-)
-plot(roc(test_y, y_hat.alasso),
-  print.auc = TRUE, col = "red", add = TRUE, print.auc.y = 0.4
-)
-plot(roc(test_y, y_hat.ss),
-  print.auc = TRUE, col = "green", add = TRUE, print.auc.y = 0.2
-)
-plot(roc(test_y, y_hat.phecap),
-  print.auc = TRUE, col = "blue", add = TRUE, print.auc.y = 0.3
-)
-legend(0, 0.3,
-  legend = c("LASSO", "ALASSO", "PheCAP", "Two-Step"),
-  col = c("black", "red", "blue", "green"),
-  lty = 1, cex = 0.8
-)
+# mu
+mu <- beta_step2[1] +
+  as.numeric(as.matrix(x[test_data$patient_id, ])
+  %*% beta[-1]) +
+  as.numeric(beta_step2[3] %*% S[test_data$patient_id])
+# expit
+y_hat_twostep <- plogis(mu)
+
+roc_twostep <- roc(test_y, y_hat_twostep)
+```
+
+# ROC
+```{r, echo=FALSE}
+ggroc(list(roc_lasso, roc_alasso, roc_twostep), legacy.axes = TRUE) +
+  scale_color_discrete(labels = c(
+    paste("LASSO, AUC =", round(auc(roc_lasso), 3)),
+    paste("ALASSO, AUC =", round(auc(roc_alasso), 3)),
+    paste("Two-Step, AUC =", round(auc(roc_twostep), 3))
+  )) + theme(legend.position = "bottom") +
+  ggtitle("The operating receiver characteristic (ROC) curve") +
+  guides(color = guide_legend(ncol = 2, title = element_blank()))
 ```
 
 # Model Evaluation
-```{r, cache=TRUE}
-start <- Sys.time()
+
+```{r,cache=TRUE}
 auc_twostep <- validate_ss(
   dat = labeled_data, nsim = 600,
   n.train = c(50, 70, 90),
-  beta = beta.step1,
+  beta = beta_step1,
   S = S,
   x = x
 )
-end <- Sys.time()
-end - start
 ```
 
 
-
-
-```{r}
-par(mfrow = c(1,3))
-# Compare with Previous method
-boxplot(cbind(auc_supervised, auc_phecap, auc_twostep)
-%>% select(starts_with("n=50")),
-ylim = c(0.5, 1), names = c("LASSO", "ALASSO","PheCAP", "Two-Step")
-, main = "n=50"
-)
-boxplot(cbind(auc_supervised, auc_phecap, auc_twostep)
-%>% select(starts_with("n=70")),
-ylim = c(0.5, 1), names = c("LASSO", "ALASSO","PheCAP", "Two-Step"), 
-main = "n=70"
-)
-boxplot(cbind(auc_supervised, auc_phecap, auc_twostep)
-%>% select(starts_with("n=90")),
-ylim = c(0.5, 1), names = c("LASSO", "ALASSO","PheCAP","Two-Step"), 
-main = "n=90"
-)
+```{r, echo=FALSE}
+tidyr::gather(cbind(auc_supervised, auc_twostep)) %>%
+  mutate(
+    n = gsub(",.*$", "", key),
+    method = sub(".*,\\s*", "", key)
+  ) %>%
+  ggplot(aes(y = value, color = method)) +
+  geom_boxplot(outlier.shape = NA) +
+  facet_wrap(. ~ n) +
+  ggtitle("Area under the ROC curve (AUC) from 600 simulations") +
+  theme(
+    legend.position = "bottom", axis.text.x = element_blank(),
+    axis.ticks = element_blank()
+  )
 ```
 
-## MAP
+# MAP
 ```{r}
 # Use untransformed data; MAP requires sparse matrix
 # Create sparse matrix for surroagtes
@@ -154,32 +170,23 @@ data_fit <- sparsify(PheCAP::ehr_data %>%
   rename(ICD = main_ICD) %>% data.table())
 
 # Create sparse matrix for HU
-note <- Matrix(PheCAP::ehr_data$healthcare_utilization, ncol = 1, sparse = TRUE)
+note <- Matrix(PheCAP::ehr_data$healthcare_utilization,
+  ncol = 1, sparse = TRUE
+)
 model_map <- MAP(mat = data_fit, note = note, full.output = TRUE)
 
-y_hat.map <- model_map$scores[data$validation_set]
+y_hat_map <- model_map$scores[data$validation_set]
+roc_map <- roc(test_y, y_hat_map)
 ```
 
 ```{r}
-plot(roc(test_y, y_hat.lasso),
-  print.auc = TRUE, main = "n_training = 106 (60%)"
-)
-plot(roc(test_y, y_hat.alasso),
-  print.auc = TRUE, col = "red", add = TRUE, print.auc.y = 0.4
-)
-plot(roc(test_y, y_hat.phecap),
-  print.auc = TRUE, col = "blue", add = TRUE, print.auc.y = 0.3
-)
-plot(roc(test_y, y_hat.ss),
-  print.auc = TRUE, col = "green", add = TRUE, print.auc.y = 0.2
-)
-plot(roc(test_y, y_hat.map),
-  print.auc = TRUE, col = "orange", add = TRUE, print.auc.y = 0
-)
-
-legend(0, 0.4,
-  legend = c("LASSO", "ALASSO", "PheCAP","Two-Step",  "PheNorm", "MAP"),
-  col = c("black", "red", "blue", "green", "orange"),
-  lty = 1, cex = 0.8
-)
+ggroc(list(roc_lasso, roc_alasso, roc_twostep, roc_map), legacy.axes = TRUE) +
+  scale_color_discrete(labels = c(
+    paste("LASSO, AUC =", round(auc(roc_lasso), 3)),
+    paste("ALASSO, AUC =", round(auc(roc_alasso), 3)),
+    paste("Two-Step, AUC =", round(auc(roc_twostep), 3)),
+    paste("MAP, AUC =", round(auc(roc_map), 3))
+  )) + theme(legend.position = "bottom") +
+  ggtitle("The operating receiver characteristic (ROC) curve") +
+  guides(color = guide_legend(ncol = 2, title = element_blank()))
 ```
