--- a/module3/module3_slides.Rmd
+++ b/module3/module3_slides.Rmd
@@ -26,23 +26,17 @@ package.check <- lapply(
 	)
 ```
 
-```{r, include = FALSE}
-data(ehr_data)
-data <- PhecapData(ehr_data, "healthcare_utilization", "label", 75,
-                   "patient_id", seed = 123)
-data
-```
-
 ```{r, include=FALSE}
 # Load helper functions.
 source("../Rscripts/helper_function.R")
-```
 
+# Load data. 
+load("environment.RData")
+```
 
 # Surrogates for CAD
 
 ```{r, include = FALSE}
-# Phecap was implemented incorrectly - please fix it 
 icd <- ehr_data %>%
   filter(!is.na(label)) %>%
   mutate(disease = factor(label)) %>%
@@ -54,26 +48,16 @@ nlp <- ehr_data %>%
   mutate(disease = factor(label)) %>%
   ggplot(aes(x = log(main_NLP + 1))) +
   geom_density(aes(color = disease))
-
-ehr_data$main_ICDNLP <- ehr_data$main_ICD + ehr_data$main_NLP
-
-
-icd_nlp <- ehr_data %>%
-  filter(!is.na(label)) %>%
-  mutate(disease = factor(label)) %>%
-  ggplot(aes(x = log(main_ICDNLP + 1))) +
-  geom_density(aes(color = disease))
 ```
 
-```{r, echo = FALSE}
-figure <- ggarrange(icd, nlp, icd_nlp,
-                    labels = c("ICD", "NLP", "ICD + NLP"),
-                    ncol = 2, nrow = 2)
+```{r, fig.height=3, echo=FALSE}
+figure <- ggarrange(icd, nlp,
+                    labels = c("ICD", "NLP"),
+                    ncol = 2, nrow = 1)
 figure
 ```
 
-The more the disease-related codes and NLP mentions, the more **likely** the patient has the disease
-
+The more the disease-related codes and NLP mentions, the more **likely** the patient has the disease.
 
 # ROC Surrogates
 
@@ -81,36 +65,30 @@ The more the disease-related codes and NLP mentions, the more **likely** the pat
 ```{r, warning=FALSE, include = FALSE}
 nonmissing_index <- which(!is.na(ehr_data$label))
 y <- ehr_data$label[nonmissing_index]
-sicd <- ehr_data$main_ICD
-snlp <- ehr_data$main_NLP 
-sicdnlp <- ehr_data$main_ICDNLP
+sicd <- ehr_data$main_ICD[nonmissing_index]
+snlp <- ehr_data$main_NLP[nonmissing_index] 
+
+roc_icd <- roc(y, log(sicd + 1))
+roc_nlp <- roc(y, log(snlp + 1))
 
 # Prepare features to be selected. 
 x <- data.matrix(ehr_data %>% select(starts_with("COD") | starts_with("NLP")))
 ```
 
-```{r, echo = FALSE}
-roc.icd <- roc(y, sicd[nonmissing_index])
-roc.nlp <- roc(y, snlp[nonmissing_index])
-roc.icdnlp <- roc(y, sicdnlp[nonmissing_index])
-
-plot(roc.icd,
-  print.auc = TRUE, main = "Surrogate ROC"
-)
-plot(roc.nlp,
-  print.auc = TRUE, col = "red", add = TRUE, print.auc.y = 0.4
-)
-plot(roc.icdnlp,
-  print.auc = TRUE, col = "blue", add = TRUE, print.auc.y = 0.3
-)
-legend(0, 0.2,
-  legend = c("ICD", "NLP", "ICD+NLP"), col = c("black", "red", "blue"),
-  lty = 1, cex = 0.8
-)
+```{r, echo=FALSE}
+ggroc(list(roc_icd, roc_nlp), legacy.axes = TRUE) +
+  scale_color_discrete(labels = c(
+    paste("ICD, AUC =", round(auc(roc_icd), 3)),
+    paste("NLP, AUC =", round(auc(roc_nlp), 3))
+  )) + theme(legend.position = "bottom") +
+  ggtitle("The operating receiver characteristic (ROC) curve") + 
+  guides(color = guide_legend(ncol = 2, title = element_blank())) + 
+  labs(x = "False positive rate (FPR)", y = "True positive rate (TPR)")
 ```
 
 # Step 1: SAFE 
 
+\tiny
 ```{r, cache=TRUE}
 surrogates <- list(
   PhecapSurrogate(
@@ -118,80 +96,79 @@ surrogates <- list(
     lower_cutoff = 1, upper_cutoff = 10),
   PhecapSurrogate(
     variable_names = "main_NLP",
-    lower_cutoff = 1, upper_cutoff = 10),
-  PhecapSurrogate(
-    variable_names = c("main_ICD", "main_NLP"),
     lower_cutoff = 1, upper_cutoff = 10))
 
 feature_selected <- phecap_run_feature_extraction(data, surrogates)
+feature_selected
 ```
 
 # Step 2: Orthogonalization + supervised learning
+
+\tiny
 ```{r}
 phecap_lasso <- phecap_train_phenotyping_model(data, surrogates, feature_selected,
                                         method = "lasso_cv")
 ```
 
+\tiny
 ```{r}
-# Load environment.
-load("environment_phecap.RData")
+phecap_lasso
 ```
 
-```{r, include = FALSE}
-vars <- names(phecap_lasso$coefficients$lasso_cv)[-1]
-vars[vars == "main_ICD&main_NLP"] <- "main_ICDNLP" 
-y_hat.phecap <- linear_model_predict(beta = phecap_lasso$coefficients$lasso_cv, 
-                                     x = test_x[, vars],
-                                     probability = TRUE)
-roc.phecap <- roc(test_y, y_hat.phecap)
-
-# compare selected features to alasso + lasso
+```{r, echo=FALSE}
+# Get model predictions + ROC curve.
+phenotype <- phecap_predict_phenotype(data, phecap_lasso)
+y_hat_phecap <- phenotype[test_data$patient_id, "prediction"]
+roc_phecap <- roc(test_y, y_hat_phecap)
 ```
 
-```{r}
-plot(roc.lasso,
-  print.auc = TRUE, main = "n_training = 90 (50%)"
-)
-plot(roc.alasso,
-  print.auc = TRUE, col = 'red', add = TRUE, print.auc.y = 0.4
-)
-plot(roc.phecap,
-  print.auc = TRUE, col = 'blue', add = TRUE, print.auc.y = 0.3
-)
-legend(0, 0.2, legend = c("LASSO", "ALASSO", "PheCAP"), col = c("black","red", "blue"), 
-       lty = 1, cex = 0.8)
-```
+# Supervised learning (LASSO, ALASSO) vs. PheCAP 
 
+```{r, echo = FALSE}
+ggroc(list(roc_lasso, roc_alasso, roc_phecap), legacy.axes = TRUE) +
+  scale_color_discrete(labels = c(
+    paste("LASSO, AUC =", round(auc(roc_lasso), 3)),
+    paste("ALASSO, AUC =", round(auc(roc_alasso), 3)),
+    paste("PheCAP, AUC =", round(auc(roc_phecap), 3))
+  )) + theme(legend.position = "bottom") +
+  ggtitle("The operating receiver characteristic (ROC) curve") + 
+  guides(color = guide_legend(ncol = 2, title = element_blank())) + 
+  labs(x = "False positive rate (FPR)", y = "True positive rate (TPR)")
+```
 
 # Supervised learning vs. PheCAP for different training size
-```{r, cache = TRUE}
-# add the comparison here 
 
+- Randomly sample training size $=50,70,90$
+- Use the remaining data as the test set
+- Repeat 600 times
 
-# selected_index <- which(colnames(ehr_data) %in% vars)
-# start<- Sys.time()
-# auc_phecap <- validate_phecap(dat = labeled_data, nsim = 600, 
-#                               n.train = c(50, 70, 90),
-#                               selected_features = selected_index)
-# end <- Sys.time()
-# end - start
-# 
-# auc_all <- cbind(auc_supervised, auc_phecap)
+\tiny
+```{r, cache=TRUE}
+auc_phecap <- validate_phecap(dat = labeled_data, 
+                              orig_data = ehr_data,
+                              surrogates = surrogates,
+                              feature_selected = feature_selected,
+                              nsim = 600,
+                              n.train = c(50, 70, 90))
 ```
 
+# Supervised learning vs. PheCAP for different training size
 
-```{r}
-# par(mfrow = c(1, 3))
-# boxplot(auc_all %>% select(starts_with("n=50")),
-#   ylim = c(0.5, 1),
-#   names = c("LASSO", "ALASSO", "PheCAP"), main = "n=50"
-# )
-# boxplot(auc_all %>% select(starts_with("n=70")),
-#   ylim = c(0.5, 1),
-#   names =  c("LASSO", "ALASSO", "PheCAP"), main = "n=70"
-# )
-# boxplot(auc_all %>% select(starts_with("n=90")),
-#   ylim = c(0.5, 1),
-#   names =  c("LASSO", "ALASSO", "PheCAP"), main = "n=90"
-# )
+```{r, echo = FALSE}
+tidyr::gather(cbind(auc_supervised, auc_phecap)) %>%
+  mutate(
+    n = gsub(",.*$", "", key),
+    method = sub(".*,\\s*", "", key)
+  ) %>%
+  ggplot(aes(y = value, color = method)) +
+  geom_boxplot(outlier.shape = NA) +
+  facet_wrap(. ~ n) +
+  ggtitle("Area under the ROC curve (AUC) from 600 simulations") +
+  theme(legend.position = "bottom", axis.text.x = element_blank(), axis.ticks = element_blank())
 ```
+
+```{r, echo = FALSE, eval = FALSE}
+save(list = ls(), file = "../module4/environment.RData")
+rmarkdown::render("module3_slides.Rmd")
+```
+
