--- a/module1/module1_slides.Rmd
+++ b/module1/module1_slides.Rmd
@@ -91,15 +91,15 @@ mean(ehr_data$label, na.rm = TRUE)
 
 # Feature distributions
 
-The features are highly skewed.
-
 ```{r echo = FALSE}
 set.seed(99)
 feature_index <- sample(c(3:ncol(ehr_data)), 10, replace = FALSE)
 ehr_data[, feature_index] %>%
   pivot_longer(everything(), names_to = "feature", values_to = "count") %>%
   ggplot() +
-  geom_density(aes(x = count, color = feature))
+  geom_density(aes(x = count, color = feature))+
+  theme(text = element_text(size = 20)) +
+  ggtitle("Density plots of randomly selected 10 features")
 ```
 
 # Prepare the data for model fitting
